[package]
name = "after"
version = "0.1.1"
authors = ["Bram Neijt <bram@neijt.nl>"]
edition = "2018"
description = "A tool wait for other processes to stop"
readme = "README.md"
homepage = "https://github.com/bneijt/after"
repository = "https://github.com/bneijt/after"
keywords = ["cli", "shell", "after"]
categories = ["command-line-utilities"]

[dependencies]
procfs = "*"
clap = "2.33"
libc = "*"
