name:                after
version:             0.1.2.0
description:         Command line utility to wait for process termination
homepage:            http://bneijt.nl
license:             GPL-3
license-file:        LICENSE
author:              A. Bram Neijt
maintainer:          bneijt@gmail.com
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
    build-depends:      base,
                        directory ==1.3.*,
                        filepath,
                        unix ==2.7.*
    hs-source-dirs:     src/lib
    exposed-modules:    After
    other-modules:      Process
    ghc-options:        -Wall
    default-language:   Haskell2010

executable after
    main-is:            Main.hs
    build-depends:      base,
                        parallel-io,
                        options ==1.*,
                        after
    hs-source-dirs:     src/main
    ghc-options:        -Wall
    default-language:   Haskell2010


test-suite afterTests
    hs-source-dirs:    src/test
    main-is:           AfterTest.hs
    type:              exitcode-stdio-1.0
    build-depends:     base,
                       unix ==2.7.*,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       after
    default-language:  Haskell2010
